@@ -337,7 +337,7 @@ if (params$irt_type != "none") {
 ```{r irt-estim, echo = FALSE}
 if (params$irt_type != "none") {
   table = params$irtcoef
-  table = round(table, 5)
+  # table = round(table, 5)
   
   kable(table, align = 'c')
 }
