@@ -27,6 +27,8 @@ MINOR UPDATES
     IRT models comparison.
   o In IRT section dpi of downloaded plots was set to 300.
   o In IRT training downloaded plots also include legend with parameters.
+  o In all IRT models table with parameters includes all parameters
+    a, b, c, d.
 
 ---------------------------------------------------
 - Changes in ShinyItemAnalysis 1.2.4 (2017-08-28) -
